<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/pb_orientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_service_toggle"
            android:layout_alignBottom="@+id/bt_service_toggle"
            android:layout_toRightOf="@+id/bt_service_toggle"
            android:text="@string/ui_service_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/bt_service_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/ui_service_status" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_below="@+id/bt_service_toggle"
            android:layout_marginTop="19dp"
            android:gravity="center_horizontal" >

            <ToggleButton
                android:id="@+id/tb_auto_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_orientation_locked"
                android:textOff="@string/ui_orientation_control_shake"
                android:textOn="@string/ui_orientation_control_tilt" />

            <Button
                android:id="@+id/bt_0_deg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_0_deg" />

            <Button
                android:id="@+id/bt_90_deg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_90_deg" />

            <Button
                android:id="@+id/bt_180_deg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_180_deg" />

            <Button
                android:id="@+id/bt_270_deg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_270_deg" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/bt_service_toggle"
            android:text="@string/ui_service_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_below="@+id/TextView01"
            android:text="@string/ui_service_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1"
            android:text="@string/ui_goto_help"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <fragment
        android:id="@+id/frag_settings"
        android:name="is.kul.shakefreeze.SettingsFragment"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>